# miscellaneous

./: LICENSE  README.md
XSpeed/: XSpeed.cbp  xspeed.cpp
binaryinterleave/: binaryinterleave_mixed.cpp  binaryinterleave_orig.cpp
checkspd/: CMakeLists.txt  chkspd.cbp  chkspd.cpp  chkspd.layout  chkspd.workspace
endian/: endian.cbp  endian.cpp
general/: splinetest.cpp
pathfind2/: pathfind.cbp  pathfind.cpp
peid/: peid.cbp  peid.cpp
svggear/: CMakeLists.txt  svggear.cpp
volfix/: vol.rc  volfix.cbp  volfix.cpp
volfix/libmp3gain/: mp3gain.cbp
volfix/libmp3gain/mp3gain/: apetag.c  apetag.h  id3tag.c  id3tag.h  mp3gain.c  mp3gain.h  replaygaindll.c
volfix/libmp3gain/mpglib/: interface.h
volfix/nsis/: clean.cmd  mkfiles.cmd  volfix.nsi
weather-calendar/: CMakeLists.txt  arrow_left.h  arrow_right.h  garbage.h  pressure.h  temperature.h  visibility.h  weatherapp.cbp  weatherapp.cpp  wind.h
